[gd_scene load_steps=5 format=2]

[ext_resource path="res://object.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]
[ext_resource path="res://manager.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
position = Vector2( 256, 256 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_left = -25.773
margin_left = -466.0
margin_top = -437.0
margin_right = 427.0
margin_bottom = 413.0
color = Color( 0.101961, 0.0941176, 0.12549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 103.0
margin_top = 114.0
margin_right = 242.0
margin_bottom = 250.0

[node name="w1" type="LineEdit" parent="Control/VBoxContainer"]
margin_right = 139.0
margin_bottom = 24.0
text = "4"
align = 2
__meta__ = {
"_editor_description_": ""
}

[node name="w2" type="LineEdit" parent="Control/VBoxContainer"]
margin_top = 28.0
margin_right = 139.0
margin_bottom = 52.0
text = "3"
align = 2

[node name="p1" type="LineEdit" parent="Control/VBoxContainer"]
margin_top = 56.0
margin_right = 139.0
margin_bottom = 80.0
text = "0"
align = 2

[node name="p2" type="LineEdit" parent="Control/VBoxContainer"]
margin_top = 84.0
margin_right = 139.0
margin_bottom = 108.0
text = "0"
align = 2

[node name="precision" type="LineEdit" parent="Control/VBoxContainer"]
margin_top = 112.0
margin_right = 139.0
margin_bottom = 136.0
text = "64"
align = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
margin_left = -51.0
margin_top = 112.0
margin_right = 86.0
margin_bottom = 248.0

[node name="l1" type="RichTextLabel" parent="Control/VBoxContainer2"]
margin_right = 137.0
margin_bottom = 40.0
text = "x wave frequency:
 "
fit_content_height = true
scroll_active = false

[node name="l2" type="RichTextLabel" parent="Control/VBoxContainer2"]
margin_top = 34.0
margin_right = 137.0
margin_bottom = 64.0
text = "y wave frequency: 
"
fit_content_height = true

[node name="l3" type="RichTextLabel" parent="Control/VBoxContainer2"]
margin_top = 68.0
margin_right = 137.0
margin_bottom = 83.0
text = "x wave phase:"
fit_content_height = true

[node name="l4" type="RichTextLabel" parent="Control/VBoxContainer2"]
margin_top = 87.0
margin_right = 137.0
margin_bottom = 117.0
text = "y wave phase:
"
fit_content_height = true

[node name="l5" type="RichTextLabel" parent="Control/VBoxContainer2"]
margin_top = 121.0
margin_right = 137.0
margin_bottom = 136.0
text = "precision:"
fit_content_height = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -71 )
script = ExtResource( 3 )

[node name="object" type="Sprite" parent="Node2D"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Main" type="Camera2D" parent="Node2D"]
offset = Vector2( -100, -100 )

[connection signal="text_changed" from="Control/VBoxContainer/w1" to="." method="_on_w1_text_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/w2" to="." method="_on_w2_text_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/p1" to="." method="_on_p1_text_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/p2" to="." method="_on_p2_text_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/precision" to="." method="_on_precision_text_changed"]
